# AVR

Charger_Tiny1614.X/nbproject/: Makefile-impl.mk  Makefile-local-default.mk  project.xml
Charger_Tiny1614.X/src/: board.h  controller.c  controller.h  hal.c  main.c  ui.c  ui.h
LCDCharTableGenerator/: LCDCharTableGenerator.sln
LCDCharTableGenerator/Inputs/: 6_DIGIT_LCD.txt  STM8L_DISCOVERY_LCD.txt
LCDCharTableGenerator/LCDCharTableGenerator/: CharTable.cs  GpioTable.cs  LCDCharTableGenerator.cs  PinTable.cs  Program.cs
LCDTest.X/: board.h  hal.c  main.c
LCDTest.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-variables.mk  configurations.xml  project.xml
LogicProbe_Tiny1614.X/: hal.c  hal.h  main.c
LogicProbe_Tiny1614.X/KiCad_untested_pcb/: logic_probe_tiny1614.kicad_pcb  logic_probe_tiny1614.kicad_prl  logic_probe_tiny1614.kicad_pro  logic_probe_tiny1614.kicad_sch
LogicProbe_Tiny1614.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  configurations.xml  project.xml
Nightlight_Tiny1614.X/nbproject/: Makefile-debug.mk  Makefile-genesis.properties  (+6 more)
Voltmeter.X/: CMakeLists.txt  board.h  hal.c  lcd_char_table.c  main.c
Voltmeter.X/Schematic/: Voltmeter_XMega16E5.kicad_prl  Voltmeter_XMega16E5.kicad_pro  Voltmeter_XMega16E5.kicad_sch
Voltmeter.X/nbproject/: Makefile-debug.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-debug.mk  Makefile-release.mk  Makefile-variables.mk  configurations.xml  project.xml
Voltmeter.X/nbproject/private/: configurations.xml  private.xml
clock/: AvrBuild.bat  alarm_melody.asm  clock.aps  clock.asm  clock.aws  hp_decoder.asm  phase_table.asm
common_lib/: nrf24.h  segment_lcd.c  segment_lcd.h  st7066.h  st7066_8bit.c
generator_ad9833/: AvrBuild.bat  generator_ad9833.aps  generator_ad9833.asm  generator_ad9833.aws
led_heart/: led_heart.atsln
lib/: i2c_tiny1614.c  i2c_tiny1614.h
lmeter/: lmeter.atsln
nrf24/: nrf24.atsln
oven_control/: AvrBuild.bat  oven_control.aps  oven_control.asm  oven_control.aws  oven_control1.lay  oven_control2.lay
power_supply/: AvrBuild.bat  lcd.asm  lcdconf.inc  power_supply.aps  power_supply.asm  power_supply.aws
rf_level_meter/: AvrBuild.bat  rf_level_meter.aps  rf_level_meter.asm  rf_level_meter.aws  rf_level_meter.lay
unfinished/Charger_Tiny1614.X/: CMakeLists.txt
unfinished/Charger_Tiny1614.X/emulator/: CMakeLists.txt
unfinished/Charger_Tiny1614.X/emulator/src/: board.h  hal.c  main.c
unfinished/Charger_Tiny1614.X/emulator/windows/: CMakeLists.txt
unfinished/Charger_Tiny1614.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-variables.mk  configurations.xml
(+52 files in other folders)
